--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,40 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+/* custom-scrollbar 클래스 정의 */
+.custom-scrollbar {
+    padding: 0 0.5em;
+    max-width: 360px;
+    overflow: auto;
+    overflow-y: auto; /* 세로 스크롤만 허용 */
+    overflow-x: hidden; /* 가로 스크롤 숨기기 */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #F1F1F1;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #D5E4B4;
+}
+
+.custom-scrollbar::-webkit-scrollbar-button {
+    display: none;
+}
+
+/* hover 효과 */
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #8CAD1E;
+    transition: all 0.2s; /* 호버 효과에 전환 추가 */
+}
+
+/* 코너에 라운드 효과 */
+.custom-scrollbar::-webkit-scrollbar-track,
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+}
