--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,3 +53,131 @@
 .custom-scrollbar::-webkit-scrollbar-thumb {
     border-radius: 5px;
 }
+
+
+.react-calendar { 
+    font-family: 'font-KoPubDotum';
+    width: 450px !important;
+    padding: 15px;
+    max-width: 100%;
+    background-color: #fff;
+    color: #222;
+    border-width: 10px;
+    border-radius: 10px !important;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.125em;
+}
+/* 년-월 */
+.react-calendar__navigation{
+    margin-bottom: 25px !important;
+}
+
+.react-calendar__navigation__label > span {
+    font-family: 'font-KoPubDotum';
+    color: #000;
+    font-family: SUIT Variable;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 140%;
+}
+
+.react-calendar__navigation button:enabled:hover{
+  color: #171717;
+    width: 16px;
+    background-color: #171717;
+    border-radius: 3px;
+}
+
+/* 요일 */
+.react-calendar__month-view__weekdays__weekday{
+    border-bottom: none !important;
+    font-family: 'font-KoPubDotum';
+    color: #000;
+    font-size: 16px;
+    font-weight: bold;
+    margin-right: 15px;
+    margin-bottom: 12px;
+}
+
+.react-calendar__month-view__days__day--weekend {
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+  }
+  
+/* 이번 달 일자 */
+.react-calendar__tile{
+    font-family: 'font-KoPubDotum';
+    color: #000;
+    font-size: 18px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+/* 저번 달 & 다음 달 일자 */
+.react-calendar__month-view__days__day--neighboringMonth{
+    font-family: 'font-KoPubDotum';
+    color: #5F5F5F;
+    font-size: 18px;
+    font-weight: bold;
+    width: 44px;
+    height: 44px;
+}
+
+/* 날짜 사이 간격 */
+.react-calendar__tile {
+    font-family: 'font-KoPubDotum';
+    padding: 10px !important;
+    margin-bottom: 12px !important;
+    font-size: 17px !important;
+}
+
+.react-calendar__tile:hover {
+    border-radius: 20% !important; /* 둥근 테두리 */
+}
+
+  /* 오늘 날짜 */
+  .react-calendar__tile--now {
+    background-color: #f6f6f6 !important; /* 현재 날짜 배경색 변경 */
+    color: #363636 !important; /* 텍스트 색상 변경 */
+    border-radius: 20% !important; /* 둥근 테두리 */
+  }
+  
+  .react-calendar__tile--now:enabled:hover,
+  .react-calendar__tile--now:enabled:focus {
+    background-color: #f6f6f6 !important; /* hover 및 focus 상태에서도 동일한 배경색 유지 */
+    border-radius: 20% !important; /* 둥근 테두리 유지 */
+  }
+  
+  /* 선택된 날짜의 배경색 변경 */
+  .react-calendar__tile--active {
+    border: 2px solid #8CAD1E !important;
+    background-color: #D2E591 !important; /* 원하는 배경색으로 변경 */
+    color: #000000 !important;
+    border-radius: 20%;
+  }
+  
+  .react-calendar__tile--active:enabled:hover,
+  .react-calendar__tile--active:enabled:focus {
+    border: 2px solid #8CAD1E !important;
+    background-color: #D2E591 !important; /* 원하는 배경색으로 변경 */
+    color: #000000 !important;
+    border-radius: 20% !important;
+   
+  }
+
+  /* 일정 있는 날 표시 점 */
+  .dot {
+    height: 8px;
+    width: 8px;
+    background-color: #51F8C4;
+    border-radius: 50%;
+    text-align: center;
+    margin-top: 3px;
+  }
