--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -31,10 +31,11 @@ body {
 /* custom-scrollbar 클래스 정의 */
 .custom-scrollbar {
     padding: 0 0.5em;
-    max-width: 360px;
+    /* max-width: 360px; */
     overflow: auto;
     overflow-y: auto; /* 세로 스크롤만 허용 */
     overflow-x: hidden; /* 가로 스크롤 숨기기 */
+    cursor: pointer;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
@@ -42,11 +43,11 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-    background-color: #F1F1F1;
+    background-color: #f4f4f4;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #D5E4B4;
+    background-color: #e7e7e7;
 }
 
 .custom-scrollbar::-webkit-scrollbar-button {
@@ -55,7 +56,7 @@ body {
 
 /* hover 효과 */
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #8CAD1E;
+    background-color: #DAEBA2;
     transition: all 0.2s; /* 호버 효과에 전환 추가 */
 }
 
