design: all-page-update
- add image
- design update

related to: #168

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,7 +18,7 @@
 
 
 body {
-    @apply bg-[#FFF9D7] font-KoPubDotum;
+    @apply font-KoPubDotum;
   }
 
 
@@ -31,10 +31,11 @@ body {
 /* custom-scrollbar 클래스 정의 */
 .custom-scrollbar {
     padding: 0 0.5em;
-    max-width: 360px;
+    /* max-width: 360px; */
     overflow: auto;
     overflow-y: auto; /* 세로 스크롤만 허용 */
     overflow-x: hidden; /* 가로 스크롤 숨기기 */
+    cursor: pointer;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
@@ -42,11 +43,11 @@ body {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-    background-color: #F1F1F1;
+    background-color: #f4f4f4;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-    background-color: #D5E4B4;
+    background-color: #e7e7e7;
 }
 
 .custom-scrollbar::-webkit-scrollbar-button {
@@ -55,7 +56,7 @@ body {
 
 /* hover 효과 */
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background-color: #8CAD1E;
+    background-color: #DAEBA2;
     transition: all 0.2s; /* 호버 효과에 전환 추가 */
 }
 
@@ -67,47 +68,62 @@ body {
 
 
 .react-calendar { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-family: 'font-KoPubDotum';
-    width: 450px !important;
-    padding: 15px;
+    width: 450px;
+    padding: 20px;
     max-width: 100%;
     background-color: #fff;
     color: #222;
-    border-width: 10px;
-    border-radius: 10px !important;
-    font-family: Arial, Helvetica, sans-serif;
+    border-width: 2px;
+    border-radius: 10px;
     line-height: 1.125em;
 }
+
+.react-calendar__navigation__next-button--years {
+    display: none;
+}
+
 /* 년-월 */
 .react-calendar__navigation{
-    margin-bottom: 25px !important;
+    margin-bottom: 25px;
+    
 }
 
 .react-calendar__navigation__label > span {
-    font-family: 'font-KoPubDotum';
     color: #000;
     font-family: SUIT Variable;
     font-size: 20px;
     font-weight: bold;
     line-height: 140%;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
-.react-calendar__navigation button:enabled:hover{
-  color: #171717;
-    width: 16px;
-    background-color: #171717;
-    border-radius: 3px;
+.react-calendar__navigation__prev-button{
+    font-size: 25px;
 }
+
+.react-calendar__navigation__next-button{
+    font-size: 25px;
+}
+
 
 /* 요일 */
 .react-calendar__month-view__weekdays__weekday{
     border-bottom: none !important;
     font-family: 'font-KoPubDotum';
+    padding: 8px !important;
     color: #000;
     font-size: 16px;
     font-weight: bold;
-    margin-right: 15px;
-    margin-bottom: 12px;
+    margin-bottom: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .react-calendar__month-view__days__day--weekend {
@@ -118,6 +134,18 @@ body {
     height: 44px;
     text-align: center;
   }
+
+  .react-calendar__month-view__weekdays {
+    display: flex;
+    justify-content: center;
+}
+
+/* 요일 밑줄 제거 */
+.react-calendar__month-view__weekdays abbr {
+    text-decoration: none;
+    font-weight: 800;
+}
+
   
 /* 이번 달 일자 */
 .react-calendar__tile{
@@ -127,7 +155,7 @@ body {
     font-weight: bold;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -144,53 +172,46 @@ body {
 /* 날짜 사이 간격 */
 .react-calendar__tile {
     font-family: 'font-KoPubDotum';
-    padding: 10px !important;
-    margin-bottom: 12px !important;
-    font-size: 17px !important;
+    padding: 10px;
+    margin-bottom: 12px;
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
 }
 
+
 .react-calendar__tile:hover {
-    border-radius: 20% !important; /* 둥근 테두리 */
+    border-radius: 20%;
 }
 
 /* 오늘 날짜 */
 .react-calendar__tile--now {
-background-color: #f6f6f6 !important; /* 현재 날짜 배경색 변경 */
-color: #363636 !important; /* 텍스트 색상 변경 */
-border-radius: 20% !important; /* 둥근 테두리 */
+background-color: #f6f6f6;
+color: #363636;
+border-radius: 20%;
 }
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-background-color: #f6f6f6 !important; /* hover 및 focus 상태에서도 동일한 배경색 유지 */
-border-radius: 20% !important; /* 둥근 테두리 유지 */
+background-color: #f6f6f6;
+border-radius: 20%;
 }
 
 /* 선택된 날짜의 배경색 변경 */
 .react-calendar__tile--active {
-border: 2px solid #8CAD1E !important;
-background-color: #D2E591 !important; /* 원하는 배경색으로 변경 */
-color: #000000 !important;
+border: 2px solid #8CAD1E;
+background-color: #D2E591;
+color: #000000;
 border-radius: 20%;
 }
 
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-border: 2px solid #8CAD1E !important;
-background-color: #D2E591 !important; /* 원하는 배경색으로 변경 */
-color: #000000 !important;
-border-radius: 20% !important;
+border: 2px solid #8CAD1E;
+background-color: #D2E591;
+color: #000000;
+border-radius: 20%;
 
-}
-
-/* 일정 있는 날 표시 점 */
-.dot {
-height: 8px;
-width: 8px;
-background-color: #51F8C4;
-border-radius: 50%;
-text-align: center;
-margin-top: 3px;
 }
 
 /* 확인 */
