S11P12C206-580 feat: 선생님 사진 등록완료 페이지 디자인

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,13 @@ body {
     @apply font-KoPubDotum;
   }
 
+.rotate {
+    transform: rotate(7deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .gradient-text {
     background: linear-gradient(to right, #F8DE56, #B2D170);
