feature/S11P12C206-533-페이지-디자인 design: 학부모 회원가입 절차 디자인 변경 완료

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -99,6 +99,11 @@ body {
 
 
 /* 확인 */
+.border-custom-gradient {
+  border-image: linear-gradient(to right, #F8DE56 50%, #D9D9D9 50%);
+  border-image-slice: 1;
+}
+
 @layer utilities {
   @media (max-width: 768px) {
     .container {
