feat: 로그인 모바일 화면 구현 #S11P12C206-692
- 반응형 헤더, 로그인 화면
- 로딩 애니메이션

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,20 @@ body {
     @apply font-KoPubDotum;
   }
 
+
+  @keyframes grow {
+    from {
+      transform: scale(0.7);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
+
+  .grow-animation {
+    animation: grow 4s forwards;
+  }
+
 .rotate {
     transform: rotate(7deg);
     display: flex;
