--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -201,6 +201,30 @@ body {
   box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1), 0 -10px 15px rgba(0, 0, 0, 0.1);
   }
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
+
+.pulse-ring {
+  position: absolute;
+  border: 4px solid rgba(255, 0, 0, 0.5);
+  border-radius: 50%;
+  animation: pulse 1.5s infinite;
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
 /* 확인 */
 /* .border-custom-gradient {
   border-image: linear-gradient(to right, #F8DE56 50%, #D9D9D9 50%);
