--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -201,28 +201,25 @@ body {
   box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1), 0 -10px 15px rgba(0, 0, 0, 0.1);
   }
 
+/* ParentBus.module.css */
+.pulse-ring {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(255, 0, 0, 0.5); /* Blue color with some transparency */
+  border-radius: 50%;
+  animation: pulse 1.5s infinite;
+}
+
 @keyframes pulse {
   0% {
-    transform: scale(1);
+    transform: scale(0.5);
     opacity: 1;
   }
   100% {
     transform: scale(2.5);
     opacity: 0;
   }
-}
-
-.pulse-ring {
-  position: absolute;
-  border: 4px solid rgba(255, 0, 0, 0.5);
-  border-radius: 50%;
-  animation: pulse 1.5s infinite;
-  width: 50px;
-  height: 50px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
 }
 
 /* 확인 */
