--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -369,3 +369,23 @@ from { transform: scale(0.9); opacity: 0; }
 to { transform: scale(1); opacity: 1; }
 }
    */ 
+
+
+.page-enter {
+  opacity: 0;
+}
+
+.page-enter-active {
+  opacity: 1;
+  transition: opacity 500ms, transform 500ms;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: opacity 500ms, transform 500ms;
+}
+  
