--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -128,7 +128,7 @@ a{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2); /* 반투명 검정색 */
+  background-color: rgba(0, 0, 0, 0.1); 
   z-index: 30; /* 다른 요소보다 위에 배치 */
 }
 
